<resources>
    <string name="app_name">StartUpAppGro</string>
    <string name="bienvenido_de_vuelta">¡BIENVENIDO DE VUELTA!</string>
    <string name="ingresa_a_tu_cuenta">Ingresa a tu cuenta</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordarme">Recordarme</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="crea_una_nueva_cuenta">Crea una nueva cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="al_iniciar_sesi_n_aceptas_nuestro_equipo_de_uso_y_pol_tica_de_privacidad">Al iniciar sesión, aceptas nuestro equipo de uso Y política de privacidad</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="animales">Animales</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="escanear">Escanear</string>
    <string name="inicio">Inicio</string>
    <string name="comunidad">Comunidad</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="mis_cultivos">Mis cultivos</string>
    <string name="plagas_y_enfermedades">Plagas y Enfermedades</string>
    <string name="consejos_de_siembra">Consejos de siembra</string>
    <string name="hola">¡Hola!</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="descubre_nuevas_plantas">Descubre nuevas plantas</string>
    <string name="todas">Todas</string>
    <string name="exteriores">Exteriores</string>
    <string name="interiores">Interiores</string>
    <string name="jardin">Jardin</string>
    <string name="palmera_ornamental">Palmera ornamental</string>
    <string name="iluminaci_n_indirecta">Iluminación indirecta</string>
    <string name="exterior">Exterior</string>
    <string name="palmera">Palmera</string>
    <string name="interior">Interior</string>
    <string name="girasol">Girasol</string>
    <string name="aspidistra">Aspidistra</string>
    <string name="beaucarnea_gracilis">Beaucarnea gracilis</string>
    <string name="tillandsia">Tillandsia</string>
    <string name="dieffenbachia">Dieffenbachia</string>
    <string name="chlorophytum">Chlorophytum</string>
    <string name="ricardo_dos_santos">Ricardo Dos Santos</string>
    <string name="hace_15_min">Hace 15 min</string>
    <string name="vean_esta_imagen_sobre_el_medio_ambiente">Vean esta imagen sobre el medio ambiente</string>
    <string name="la_cuenta_regresiva_del_reloj_clim_tico_ha_iniciado">La cuenta regresiva del reloj climático ha iniciado...</string>
    <string name="agregar_un_comentario">Agregar un comentario</string>
    <string name="_2_3k">2.3k</string>
    <string name="_234">234</string>
    <string name="hace_1_hora">Hace 1 hora</string>
    <string name="qu_tal_su_experiencia_con_appgro">¿Qué tal su experiencia con APPGRO?</string>
    <string name="_87_personas_respondieron">87 personas respondieron</string>
    <string name="_80_t_t_excelente">80 % \t\t Excelente</string>
    <string name="_18_t_t_buena">18 % \t\t Buena</string>
    <string name="_2_t_t_mala">2 % \t\t Mala</string>
    <string name="escribir_una_publicaci_n">Escribir una publicación</string>
    <string name="fragment_animal">Fragment Animal</string>
    <string name="fragment_perfil_animal">Fragment Perfil Animal</string>
    <string name="fragment_home_animal">Fragment Home Animal</string>
    <string name="alimentaci_n">Alimentación</string>
    <string name="perros">Perros</string>
    <string name="gatos">Gatos</string>
    <string name="aves">Aves</string>
    <string name="otros">Otros</string>
    <string name="cuidados">Cuidados</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur">Lorem ipsum dolor sit amet, consetetur</string>
    <string name="juegos">Juegos</string>
    <string name="mis_mascotas">Mis mascotas</string>
    <string name="nombre">Nombre</string>
    <string name="tobey">Tobey</string>
    <string name="edad">Edad</string>
    <string name="_4_a_os">4 años</string>
    <string name="peso">Peso</string>
    <string name="_15_kg">15 kg</string>
    <string name="raza">Raza</string>
    <string name="labrador">Labrador</string>
    <string name="vacunas">Vacunas</string>
    <string name="productos_y_comida_favorita">Productos y comida favorita</string>
    <string name="purina_beneful">Purina Beneful</string>
    <string name="ver_producto">Ver producto</string>
    <string name="c_450_00">C$ 450.00</string>
    <string name="c_175_00">C$ 175.00</string>
    <string name="ver_reseta">Ver receta</string>
    <string name="digestive_care">Digestive Care</string>
    <string name="croqueta_de_avena">Croqueta de avena</string>
    <string name="productos">Productos</string>
    <string name="favoritos">Favoritos</string>
    <string name="filtros">Filtros</string>
    <string name="salud">Salud</string>
    <string name="gato">Gato</string>
    <string name="royale_canine">Royale Canine</string>
    <string name="c_330_00">C$ 330.00</string>
    <string name="ver_m_s">Ver más...</string>
    <string name="comida_casera">Comida casera</string>
    <string name="la_aplicaci_n_a_n_sigue_en_desarrollo_es_posible_que_algunas_de_las_funciones_no_est_n_disponibles">La aplicación aún sigue en desarrollo. Es posible que algunas de las funciones no estén disponibles.</string>
    <string name="continuar">Continuar...</string>
    <string name="buscar_en_appgro">Buscar en APPGRO</string>
    <string name="captura_una_fotograf_a_de_la_parte_afectada_de_la_planta">Captura una fotografía de la parte afectada de la planta</string>
    <string name="nota_trate_de_que_la_fotograf_a_tomada_no_sea_borrosa_ya_que_afectar_en_la_detecci_n_de_la_enfermedad">Nota: Trate de que la fotografía tomada no sea borrosa, ya que afectará en la detección de la enfermedad.</string>
    <string name="capturar_fotograf_a">Capturar fotografía</string>
    <string name="sane_su_cultivo">Sane su cultivo</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="ver_diagn_stico">Ver diagnóstico</string>
    <string name="obtener_el_tratamiento">Obtener el tratamiento</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="appgro">NaPet</string>
    <string name="plantas">Plantas</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_drawer2">DrawerActivity2</string>
    <string name="juana_p_rez">Juana Pérez</string>
    <string name="sit_e_el_da_o_del_cultivo_dentro_del_marco">Sitúe el daño del cultivo dentro del marco</string>
    <string name="estado">Estado</string>
</resources>