<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilMascotaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cera_pro_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tobey"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/cera_pro_bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#5A5A5A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cera_pro_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_a_os"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/cera_pro_bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#5A5A5A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cera_pro_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_kg"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/cera_pro_bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#5A5A5A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raza"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cera_pro_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labrador"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/cera_pro_bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#5A5A5A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cera_pro_bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/vacunas"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:elevation="10dp"
        android:layout_margin="8dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/shape_background"
        android:src="@drawable/add"/>
</androidx.appcompat.widget.LinearLayoutCompat>