<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:elegantTextHeight="true"
                android:textSize="24sp"
                android:textColor="#3F6953"
                android:text="@string/bienvenido_de_vuelta"
                android:fontFamily="@font/cera_pro_bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:elegantTextHeight="true"
                android:textSize="22sp"
                android:textColor="#3F6953"
                android:text="@string/ingresa_a_tu_cuenta"
                android:fontFamily="@font/cera_pro_light"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_outline_check_circle_24"
                app:boxBackgroundMode="outline">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#87E675"
                    android:fontFamily="@font/cera_pro_medium"
                    android:background="@drawable/shadow_input"
                    android:hint="@string/correo_electr_nico"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_round_email_24"
                    android:autofillHints="emailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="multiply"
                android:layout_marginTop="40dp"
                app:boxBackgroundMode="outline">
                <EditText android:id="@+id/etPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="#87E675"
                    android:fontFamily="@font/cera_pro_medium"
                    android:background="@drawable/shadow_input"
                    android:hint="@string/contrase_a"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_round_lock_24"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textColor="#3F6953"
                    android:layout_weight="1"
                    android:text="@string/recordarme"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_pro_medium"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:layout_weight="0"
                    android:textColor="#3F6953"
                    android:textSize="15sp"
                    android:text="@string/olvidaste_tu_contrase_a"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="18sp"
                android:elevation="0dp"
                style="@style/ButtonShape"
                android:fontFamily="@font/cera_pro_bold"
                android:textColor="@color/white"
                android:text="@string/ingresar"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#3F6953"
                    android:fontFamily="@font/cera_pro_medium"
                    android:layout_marginEnd="2dp"
                    android:text="@string/no_tienes_una_cuenta"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3F6953"
                    android:fontFamily="@font/cera_pro_bold"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:text="@string/reg_strate"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>