<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:elegantTextHeight="true"
                android:textSize="24sp"
                android:textColor="#3F6953"
                android:text="@string/reg_strate"
                android:fontFamily="@font/cera_pro_bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:elegantTextHeight="true"
                android:textSize="22sp"
                android:textColor="#3F6953"
                android:text="@string/crea_una_nueva_cuenta"
                android:fontFamily="@font/cera_pro_light"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="outline">
                <EditText android:id="@+id/etUsernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColorHint="#87E675"
                    android:fontFamily="@font/cera_pro_medium"
                    android:background="@drawable/shadow_input"
                    android:hint="@string/usuario"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_round_person_24"
                    android:autofillHints="username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_outline_check_circle_24"
                app:boxBackgroundMode="outline">
                <EditText android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#87E675"
                    android:fontFamily="@font/cera_pro_medium"
                    android:background="@drawable/shadow_input"
                    android:hint="@string/correo_electr_nico"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_round_email_24"
                    android:autofillHints="emailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="multiply"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="outline">
                <EditText android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="#87E675"
                    android:fontFamily="@font/cera_pro_medium"
                    android:background="@drawable/shadow_input"
                    android:hint="@string/contrase_a"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_round_lock_24"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="multiply"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="outline">
                <EditText android:id="@+id/etPasswordConfirmRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="#87E675"
                    android:fontFamily="@font/cera_pro_medium"
                    android:background="@drawable/shadow_input"
                    android:hint="@string/confirmar_contrase_a"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_round_lock_24"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>

          <TextView
              android:layout_width="wrap_content "
              android:layout_height="wrap_content"
              android:text="@string/al_iniciar_sesi_n_aceptas_nuestro_equipo_de_uso_y_pol_tica_de_privacidad"
              android:fontFamily="@font/cera_pro_bold"
              android:textColor="#3F6953"
              android:textSize="18sp"
              android:elegantTextHeight="true"
              android:layout_marginTop="20dp"
              android:textAlignment="center"
              android:padding="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                style="@style/ButtonShape"
                android:fontFamily="@font/cera_pro_bold"
                android:textColor="@color/white"
                android:text="@string/registrarse"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#3F6953"
                    android:fontFamily="@font/cera_pro_medium"
                    android:layout_marginEnd="2dp"
                    android:text="@string/ya_tienes_cuenta"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3F6953"
                    android:fontFamily="@font/cera_pro_bold"
                    android:textSize="18sp"
                    style="@style/ButtonShape"
                    android:background="@android:color/transparent"
                    android:text="@string/inicia_sesi_n"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>